--- a/modal.css
+++ b/modal.css
@@ -1,10 +1,154 @@
-#authorize-modal
+.my-modal
 {
+    top: 0;
+    left: 0;
     position: absolute;
     width: 100%;
     height: 100%;
 
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(0, 0, 0, 0.58);
+    font: 1.3em "Amatic SC R";
+}
+
+.my-modal > div
+{
+    position: absolute;
+    top: calc(50% - 732px / 2);
+    left: calc(50% - 955px / 2);
+
+    text-align: center;
+
+    width: 955px;
+    height: 732px;;
+
+    background-color: #F1F1F1;
+    border-radius: 15px;
+}
+
+.my-modal > div > img
+{
+    margin-top: 30px;
+}
+
+.close-modal
+{
+    font-family: 'system-ui';
+
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    width: 25px;
+    height: 25px;
+
+    text-align: center;
+
+    border-radius: 100px;
+    background: #FFFFFF;
+    box-shadow: 1px 5px 8px -1px rgba(0, 0, 0, 0.14);
+
+    font-size: 0.8em;
+
+    cursor: pointer;
+}
+
+.modal-input
+{
+    width: 564px;
+    height: 53px;
+
+    border-radius: 14px;
+    font-size: 1.6em;
+    border: 1px solid #4b4b4b;
+
+    padding-left: 15px;
+}
+
+.warning::after
+{
+    margin-top: 15px;
+
+    margin-left: 20px;
+    content: '';
+    width: 60px;
+    height: 60px;
+    background: url(img/warning.png) no-repeat center/60px;
+    position: absolute;
+}
+
+.modal-input:focus
+{
+    outline: none;
+}
+
+::-webkit-input-placeholder  /* Chrome */
+{
+    color: #B1B1B1;
+}
+:-ms-input-placeholder       /* IE 10+ */
+{
+    color: #B1B1B1;
+}
+::-moz-placeholder           /* Firefox 19+ */
+{
+    color: #B1B1B1;
+    opacity: 1;
+}
+:-moz-placeholder            /* Firefox 4 - 18 */
+{
+    color: #B1B1B1;
+    opacity: 1;
+}
+
+.modal-button
+{
+    width: 204px;
+    height: 51px;
+
+    background: #FFB0C3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 14px;
+
+    border: none;
+
+    font-size: 37px;
+    color: #FFFFFF;
+
+    transition: box-shadow 0.2s;
+}
+
+.modal-button:active
+{
+    box-shadow: none !important;
+}
+
+.modal-button:hover
+{
+    box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.25);
+}
+
+.modal-danger
+{
+    color: red;
+    font-size: 40px;
+}
+
+#link-wrapper
+{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 10px;
+
+    text-align: center;
+}
+
+#register-link
+{ 
+    color: black;
+    font-size: 30px;
+    
+    /* margin-right: 10px; */
 }
 
 .hidden
