--- a/header_footer.css
+++ b/header_footer.css
@@ -1,3 +1,4 @@
+/*Заглавная*/
 html, body 
         {
             margin: 0;
@@ -49,3 +50,20 @@ header
     text-align: center;
     align-self: center;
 } 
+
+/*Подвал*/
+#basement
+{
+    position: fixed;
+    bottom: 0%;
+    width: 100%;
+    background-color: #ECC8C9;
+    border-radius: 16px 16px 0px 0px;
+    text-align: center;
+}
+
+#basement > span
+{
+   line-height: 50px;
+   font: 1.5em "Amatic SC R";
+}
