--- a/header_footer.css
+++ b/header_footer.css
@@ -1,14 +1,17 @@
 /*Заглавная*/
 html, body 
-        {
-            margin: 0;
-        }
+{
+    margin: 0;
+    z-index: -2;
+
+    transition: background 0.2s;
+    transition: color 0.2s;
+}
 
 header 
 {
     width: 100%;
     height: 110px;
-    background-color: #C3AED6;
     position: relative;
 
     display: flex;
@@ -16,6 +19,10 @@ header
     flex-wrap: nowrap;
     justify-content: space-between;
     vertical-align: middle;
+
+    /* z-index: -1; */
+
+    transition: background-color 0.2s;
 }
 
 #logo-img
@@ -57,9 +64,10 @@ header
     position: fixed;
     bottom: 0%;
     width: 100%;
-    background-color: #ECC8C9;
     border-radius: 16px 16px 0px 0px;
     text-align: center;
+
+    transition: background-color 0.2s;
 }
 
 #basement > span
