--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,30 @@
-.pop{
-    
+main
+{
+    width: 100%;
+    margin-top: 30px;
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    text-align: center;
+}
+
+#our-selection
+{
+    width: 1199px;
+    height: 305px;
+
+}
+
+#our-selection > slider
+{
+    display: flex;
+    justify-content: space-around;
+}
+
+#our-selection > slider > img,
+#our-selection > slider > .selection-posts
+{
+    align-self: center;
 }
