--- a/header_footer.css
+++ b/header_footer.css
@@ -64,14 +64,15 @@ header
     position: fixed;
     bottom: 0%;
     width: 100%;
+    height: 45px;
     border-radius: 16px 16px 0px 0px;
     text-align: center;
-
+    line-height: 45px;
     transition: background-color 0.2s;
 }
 
 #basement > span
 {
-   line-height: 50px;
+   
    font: 1.5em "Amatic SC R";
 }
