--- a/nav.css
+++ b/nav.css
@@ -76,7 +76,66 @@ section.nav-flex
     content: ']';
 }
 
-.selected-nav
+/* .selected-nav
 {
     transition: background-color 0.2s;
 }
+
+.nav-element
+{
+    color: var(--inv);
+    transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);	
+	cursor: pointer;
+	user-select: none;
+}
+
+.nav-element:before,
+.nav-element::after
+{
+	position: absolute;	
+	transition: inherit;
+	z-index: -1;
+}
+
+.nav-element:hover
+{
+    color: var(--def);
+	transition-delay: .5s;
+}
+
+.nav-element:hover:before {
+	transition-delay: 0s;
+}
+
+.nav-element:hover:after {
+	background: var(--inv);
+	transition-delay: .35s;
+}
+
+.nav-element:before {
+	top: 0;
+	left: 50%;
+	height: 100%;
+	width: 0;
+	border: 1px solid var(--inv);
+	border-left: 0;
+	border-right: 0;
+}
+
+.nav-element:after {
+	bottom: 0;
+	left: 0;
+	height: 0;
+	width: 100%;
+	background: var(--inv);
+}
+
+.nav-element:hover:before {
+	left: 0;
+	width: 100%;
+}
+
+.nav-element:hover:after {
+	top: 0;
+	height: 100%;
+} */
