--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -16,3 +16,8 @@
 	font-style: bold;
 	src: url('AmaticSC-Bold.ttf');
 }
+
+/*regular*/
+@font-face{
+	font-family: "Zen Kurenaido"
+	src: url('ZenKurenaido-Regular.ttf')
