--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -19,5 +19,6 @@
 
 /*regular*/
 @font-face{
-	font-family: "Zen Kurenaido"
-	src: url('ZenKurenaido-Regular.ttf')
+	font-family: "Zen Kurenaido";
+	src: url('ZenKurenaido-Regular.ttf');
+}
