--- a/header_footer.css
+++ b/header_footer.css
@@ -61,7 +61,7 @@ header
 /*Подвал*/
 #basement
 {
-    position: fixed;
+    margin-top: 100px;
     bottom: 0%;
     width: 100%;
     height: 45px;
@@ -69,10 +69,10 @@ header
     text-align: center;
     line-height: 45px;
     transition: background-color 0.2s;
+
 }
 
 #basement > span
 {
-   
    font: 1.5em "Amatic SC R";
 }
