--- a/homepage.css
+++ b/homepage.css
@@ -28,3 +28,25 @@ main
 {
     align-self: center;
 }
+/* 
+body::-webkit-scrollbar 
+{
+    width: 10px;
+}
+  
+body::-webkit-scrollbar-track 
+{
+-webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
+background-color: #f9f9fd;
+}
+
+body::-webkit-scrollbar-thumb 
+{
+background-color: -webkit-linear-gradient(45deg,rgba(255, 255, 255, .25) 25%,
+                    transparent 25%,
+                    transparent 50%,
+                    rgba(255, 255, 255, .25) 50%,
+                    rgba(255, 255, 255, .25) 75%,
+                    transparent 75%,
+                    transparent); */
+}
