--- a/homepage.css
+++ b/homepage.css
@@ -1,4 +1,4 @@
-main
+/* main
 {
     width: 100%;
     margin-top: 30px;
@@ -27,26 +27,50 @@ main
 #our-selection > slider > .selection-posts
 {
     align-self: center;
-}
-/*  
-body::-webkit-scrollbar 
+} */
+ 
+::-webkit-scrollbar /*размеры ползунков*/
 {
-    width: 10px;
+    width: 10px ;
 }
   
-body::-webkit-scrollbar-track 
+::-webkit-scrollbar-track /*цвет дорожки*/
 {
--webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset;
-background-color: #f9f9fd;
+background-color: #f9f9fd
 }
 
-body::-webkit-scrollbar-thumb 
+::-webkit-scrollbar-thumb /*свойства ползунка*/
 {
-background-color: -webkit-linear-gradient(45deg,rgba(255, 255, 255, .25) 25%,
-                    transparent 25%,
-                    transparent 50%,
-                    rgba(255, 255, 255, .25) 50%,
-                    rgba(255, 255, 255, .25) 75%,
-                    transparent 75%,
-                    transparent); 
-} */
+    background-color: #f2bf93;
+    background-image: repeating-linear-gradient(45deg, #ababcb, #d3d1e4 10px, #e8e2f0 10px, #e2cbdb 20px);
+    border-radius: 5px ;
+}
+
+*::-webkit-scrollbar-thumb:hover 
+{
+    background-color:rgba(0,0,0,.3);
+} 
+
+/* *
+{
+    scrollbar-width: thin;
+    scrollbar-color: repeating-linear-gradient(45deg, #606dbc, #606dbc 10px, #465298 10px, #465298 20px);
+    
+}
+
+/* ::-webkit-scrollbar {
+    width: 1em;
+  }
+   
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+
+::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+  } */
+
+
